# basevault

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  vitest.config.js
.github/: CODEOWNERS
.github/workflows/: lint.yml  release.yml
python/engine/: _dotenv.py  actions.py  attestation_view.py  chat_exports.py  chatbot.py  chatbot_dispatch.py  chatbot_sidecar.py  chatbot_tools.py  chatbot_turn.py  content_extractor.py  download_model.py  embeddings.py  entities.py  files_manifest.py  ingestor.py  insights.py  llm.py  llm_cache.py  mlx_provider.py  ollama_provider.py  parse_signals.py  patterns.py  preprocessor.py  progress.py  pytest.ini  rag_chunker.py  rag_enricher.py  rag_vector_store.py  requirements.txt  retrieval.py  retry.py  runner.py  setup_local.py  shareable.py  shareable_markers.py  splitter.py  tokens.py  vision.py
python/engine/common/: dates.py  session.py  stats.py  status.py  utils.py
python/engine/phases/: __init__.py  actions.py  chat.py  embeddings.py  entities_job.py  entity_dedupe.py  entity_grouping.py  entity_summarize.py  extraction_completion.py  (+10 more)
python/kernel/: README.md  abstractions.py  cancellation_manager.py  enums.py  execution_env.py  retry.py  scheduler.py  tinfoil_provider.py  utils.py
scripts/: code_gates.py  cut-release.sh  manual-release.sh  notarize.sh  relocate-bundled-libs.py  restart.sh  setup-bundled-python.sh  trust_gates.py
scripts/hooks/: pre-push
src/: App.css  App.jsx  App.test.jsx  AttestationPanel.jsx  AttestationPanel.test.jsx  ChatbotHelper.jsx  ChatbotHelper.test.jsx  CopyButton.jsx  ErrorWithTrace.jsx  ErrorWithTrace.test.jsx  RunViews.jsx  RunViews.test.jsx  Settings.jsx  Settings.test.jsx  Wizard.jsx  Wizard.test.jsx  dateFormat.js  dateFormat.test.js  finder.bench.mjs  localUsable.js  localUsable.test.js  obsidianRenderer.js  obsidianRenderer.test.jsx  teeProviders.js  teeProviders.test.js  useLocalModel.js  validateInputs.js  validateInputs.test.js
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate.sh  icon.icns
src-tauri/src/: lib.rs  main.rs
src/test/: setup.js
(+150 files in other folders)
